refactor: 게시글, 댓글 코드 리팩토링